# wallrotate

./: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
packaging/: wallrotate.desktop
src/wallrotate/: app.py  collage.py  config.py  engine.py  fullscreen.py  plasma_bridge.py
src/wallrotate/resources/: check_fullscreen.js
