[project]
name = "wallrotate"
version = "0.1.0"
description = "Rotador de fondos de pantalla con collages, por monitor, para KDE Plasma"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.3.0",
    "pyside6>=6.11.1",
]

[project.scripts]
wallrotate = "wallrotate.app:main"
wallrotate-engine = "wallrotate.engine:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wallrotate"]
